# aoc

./: .gitmodules  Cargo.toml  README.md
2020/: Cargo.toml
2020/01/: input  main.rs  test.rs
2020/02/: input  main.rs  test.rs
2020/03/: input  main.rs  test.rs
2020/04/: input  main.rs  test.rs
2020/05/: input  main.rs  test.rs
2020/06/: input  main.rs  test.rs
2020/07/: input  main.rs  test.rs
2020/08/: input  main.rs  test.rs
2020/09/: input  main.rs  test.rs
2020/10/: input  main.rs  test.rs
2020/11/: input  main.rs  test.rs
2020/12/: input  main.rs  test.rs
2020/13/: input  main.rs  test.rs
2020/14/: input  main.rs  test.rs
2020/15/: input  main.rs  test.rs
2020/16/: input  main.rs  test.rs
2020/17/: input  main.rs  test.rs
2020/18/: input  main.rs  test.rs
2020/19/: input  main.rs  test.rs
2020/20/: input  main.rs  test.rs
2020/21/: input  main.rs  test.rs
2020/22/: input  main.rs  test.rs
2020/23/: input  main.rs  test.rs
2020/24/: input  main.rs  test.rs
2020/25/: input  main.rs  test.rs
2021/: Cargo.toml
2021/01/: Cargo.toml  input  main.rs  test.rs
2021/02/: Cargo.toml  input  main.rs  test.rs
2021/03/: Cargo.toml  input  main.rs  test.rs
2021/04/: Cargo.toml  input  main.rs  test.rs
2021/05/: Cargo.toml  input  main.rs  test.rs
2021/06/: Cargo.toml  input  main.rs  test.rs
2021/07/: Cargo.toml  input  main.rs  test.rs
2021/08/: Cargo.toml  input  main.rs  test.rs
2021/09/: Cargo.toml  input  main.rs  test.rs
2021/10/: Cargo.toml  input  main.rs  test.rs
2021/11/: Cargo.toml  input  main.rs  test.rs
2021/12/: Cargo.toml  input  main.rs  test.rs
2021/14/: Cargo.toml  input  main.rs  test.rs
2021/15/: Cargo.toml  input  main.rs  test.rs
2021/16/: Cargo.toml  input  main.rs  test.rs
2021/17/: Cargo.toml  input  main.rs  test.rs
2021/18/: Cargo.toml  input  main.rs  test.rs
2021/19/: Cargo.toml  input  main.rs  test.rs
2021/20/: Cargo.toml  input  main.rs  test.rs
2021/21/: Cargo.toml  input  main.rs  test.rs
2021/22/: Cargo.toml  input  main.rs  test.rs
2021/23/: Cargo.toml  input  main.rs  test.rs
2021/24/: Cargo.toml  input  main.rs  test.rs
2021/25/: Cargo.toml  input  main.rs  test.rs
2022/: Cargo.toml
2022/01/: input  main.rs  test.rs
2022/02/: input  main.rs  test.rs
2022/03/: input  main.rs  test.rs
2022/04/: input  main.rs  test.rs
2022/05/: input  main.rs  test.rs
2022/06/: input  main.rs  test.rs
2022/07/: input  main.rs  test.rs
2022/08/: input  main.rs  test.rs
2022/09/: input  main.rs  test.rs
2022/10/: input  main.rs  test.rs
2022/11/: input  main.rs  test.rs
2022/12/: input  main.rs  test.rs
2022/13/: input  main.rs  test.rs
2022/14/: input  main.rs  test.rs
2022/15/: input  main.rs  test.rs
2022/16/: input  main.rs  test.rs
2022/17/: input  main.rs  test.rs
2022/18/: input  main.rs  test.rs
2022/19/: input  main.rs  test.rs
2022/20/: input  main.rs  test.rs
2022/21/: input  main.rs  test.rs
2022/22/: input  main.rs  test.rs
2022/23/: input  main.rs  test.rs
2022/24/: input  main.rs  test.rs
2023/: Cargo.toml
2023/01/: input  main.rs  test.rs
2023/02/: input  main.rs  test.rs
2023/03/: input  main.rs  test.rs
2023/04/: input  main.rs  test.rs
2023/05/: input  main.rs  test.rs
2023/06/: input  main.rs  test.rs
2023/07/: input  main.rs  test.rs
2023/08/: input  main.rs  test.rs
2023/09/: input  main.rs  test.rs
2023/10/: input  main.rs  test.rs
2023/11/: input  main.rs  test.rs
2023/12/: input  main.rs  test.rs
2023/13/: input  main.rs  test.rs
2023/14/: input  main.rs  test.rs
2023/15/: input  main.rs  test.rs
2023/16/: input  main.rs  test.rs
2023/17/: input  main.rs  test.rs
2023/18/: input  main.rs  test.rs
2023/19/: input  main.rs  test.rs
2023/20/: input  main.rs  test.rs
2024/: Cargo.toml
2024/01/: input  main.rs  test.rs
2024/02/: input  main.rs  test.rs
2024/03/: input  main.rs  test.rs
2024/04/: input  main.rs  test.rs
2024/05/: input  main.rs  test.rs
2024/06/: input  main.rs  test.rs
2024/07/: input  main.rs  test.rs
2024/08/: input  main.rs  test.rs
2024/09/: input  main.rs  test.rs
2024/10/: input  main.rs  test.rs
2024/11/: input  main.rs  test.rs
2024/12/: input  main.rs  test.rs
2024/13/: input  main.rs  test.rs
2024/14/: input  main.rs  test.rs
2024/15/: input  main.rs  test.rs
2024/16/: input  main.rs  test.rs
2024/17/: input  main.rs  test.rs
2024/18/: input  main.rs  test.rs
2024/19/: input  main.rs  test.rs
2024/20/: input  main.rs  test.rs
2024/21/: input  main.rs  test.rs
2024/22/: input  main.rs  test.rs
2024/23/: input  main.rs  test.rs
2024/24/: input  main.rs  test.rs
2024/25/: input  main.rs  test.rs
