[package]
name = "year-2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "2020-01"
path = "01/main.rs"

[[bin]]
name = "2020-02"
path = "02/main.rs"

[[bin]]
name = "2020-03"
path = "03/main.rs"

[[bin]]
name = "2020-04"
path = "04/main.rs"

[[bin]]
name = "2020-05"
path = "05/main.rs"

[[bin]]
name = "2020-06"
path = "06/main.rs"

[[bin]]
name = "2020-07"
path = "07/main.rs"

[[bin]]
name = "2020-08"
path = "08/main.rs"

[[bin]]
name = "2020-09"
path = "09/main.rs"

[[bin]]
name = "2020-10"
path = "10/main.rs"

[[bin]]
name = "2020-11"
path = "11/main.rs"
