[package]
name = "year-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "2021-01"
path = "01/main.rs"

[[bin]]
name = "2021-02"
path = "02/main.rs"

[[bin]]
name = "2021-03"
path = "03/main.rs"

[[bin]]
name = "2021-04"
path = "04/main.rs"

[[bin]]
name = "2021-05"
path = "05/main.rs"

[[bin]]
name = "2021-06"
path = "06/main.rs"

[[bin]]
name = "2021-07"
path = "07/main.rs"

[[bin]]
name = "2021-08"
path = "08/main.rs"

[[bin]]
name = "2021-09"
path = "09/main.rs"

[[bin]]
name = "2021-10"
path = "10/main.rs"

[[bin]]
name = "2021-11"
path = "11/main.rs"

[[bin]]
name = "2021-12"
path = "12/main.rs"

# [[bin]]
# name = "2021-13"
# path = "13/main.rs"

[[bin]]
name = "2021-14"
path = "14/main.rs"

[[bin]]
name = "2021-15"
path = "15/main.rs"

[[bin]]
name = "2021-16"
path = "16/main.rs"

[[bin]]
name = "2021-17"
path = "17/main.rs"

[[bin]]
name = "2021-18"
path = "18/main.rs"

[[bin]]
name = "2021-19"
path = "19/main.rs"

[[bin]]
name = "2021-20"
path = "20/main.rs"

[[bin]]
name = "2021-21"
path = "21/main.rs"

[[bin]]
name = "2021-22"
path = "22/main.rs"

[[bin]]
name = "2021-23"
path = "23/main.rs"

[[bin]]
name = "2021-24"
path = "24/main.rs"

[[bin]]
name = "2021-25"
path = "25/main.rs"
