[package]
name = "year-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "2023-01"
path = "01/main.rs"

[[bin]]
name = "2023-02"
path = "02/main.rs"

[[bin]]
name = "2023-03"
path = "03/main.rs"

[[bin]]
name = "2023-04"
path = "04/main.rs"

[[bin]]
name = "2023-05"
path = "05/main.rs"

[[bin]]
name = "2023-06"
path = "06/main.rs"

[[bin]]
name = "2023-07"
path = "07/main.rs"

[[bin]]
name = "2023-08"
path = "08/main.rs"

[[bin]]
name = "2023-09"
path = "09/main.rs"

[[bin]]
name = "2023-10"
path = "10/main.rs"

[[bin]]
name = "2023-11"
path = "11/main.rs"

[[bin]]
name = "2023-12"
path = "12/main.rs"

[[bin]]
name = "2023-17"
path = "17/main.rs"

[[bin]]
name = "2023-18"
path = "18/main.rs"
